Se terminó el proyecto, añadiendo la página 2, terminando el registro y mejorando las dos paginas anteriores (index y página 1)

--- a/registro.html
+++ b/registro.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Registrate</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="registro.css">
 
 </head>
 <body>
@@ -30,10 +31,16 @@
             <input type="submit">
         
         </form>
+        <p> Declaración de privacidad: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, enim. Fuga nulla explicabo fugit ratione amet molestiae tempore, blanditiis accusamus libero nobis repudiandae labore veniam, consequatur quaerat ut, aperiam atque?</p>
+        <p>Aceptar la politica de datos</p> <input type="checkbox" placeholder="Acepto la politica de datos y privacidad">
     </main>
+    <hr>
 
     <footer>
-
+        <p> Todos los derechos reservados (David Escobar Barrera &reg;) </p>
+        <p> Created by: David Escobar B &copy; </p>
+        <p> Medellín-Antioquia </p>
+        <p> 2021 </p>
 
 
     </footer>
