--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <ul>
                     <li><a href="https://www.spacex.com/human-spaceflight/" target="BLANK">Ir a la pagina de Space X</a></li>
                     <li><a href="registro.html">Registro</a></li>
-                    <li><a href="https://es.wikipedia.org/wiki/Elon_Musk" target="BLANK">Biografia</a></li>
+                    <li><a href="https://es.wikipedia.org/wiki/Elon_Musk" target= "BLANK" >Biografia en Wikipedia</a></li>
+                    <li><a href="pagina2.html" >Empresas de Elon</a></li>
                     <br>
                 </ul>
            </nav>
